--- a/usercenter/templates/login.html
+++ b/usercenter/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} 用户注册 {% endblock %}
+{% block title %} 用户登陆 {% endblock %}
 {% block css %}
 <style type="text/css">
     .account{
@@ -13,24 +13,24 @@
 </style>
 {% endblock %}
 
-
 {% block content %}
 <div class="account">
-    <h1 align="center">用 户 注 册</h1>
-    <form id="regForm" method='POST' novalidate>
+    <h1 align="center">用 户 登 陆</h1>
+    <form id="loginForm" method='POST' novalidate>
         {% csrf_token %}
-        {% for user in form %}
+                {% for user in form %}
             <div class="form-group">
                 <label for="{{ field.id_for_label }}">{{ user.label}}:</label>
                 {{ user }}
                 <span class="error-msg"></span>
             </div>
         {% endfor %}
-        <button id="btnSubmit" type="button" class="btn btn-success">注 册</button>
-        <button type="reset" class="btn btn-warning">重 置</button>
+        <button id="btnSubmit" type="button" class="btn btn-success">登 陆</button>
+        <button type="reset" class="btn btn-warning">取 消</button>
     </form>
 </div>
 {% endblock %}
+
 
 {% block js %}
 <script>
