--- a/usercenter/templates/base.html
+++ b/usercenter/templates/base.html
@@ -33,11 +33,11 @@
           <li><a href="#">帮助文档</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">登陆系统</a></li>
+        <li><a href="{% url 'login' %}">登陆系统</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">用户注册<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
+            <li><a href="{% url 'register' %}">注册新用户</a></li>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
