完成wiki的多级目录

--- a/usercenter/templates/base.html
+++ b/usercenter/templates/base.html
@@ -21,29 +21,32 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">项目计划OA系统</a>
+      <a class="navbar-brand" href="{% url 'index' %}">项目计划OA系统</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="{% url 'index' %}">首页 <span class="sr-only">(current)</span></a></li>
         <li><a href="#">任务计划</a></li>
-          <li><a href="#">WIKI</a></li>
+          <li><a href="{% url 'wiki_index' %}">WIKI</a></li>
           <li><a href="#">帮助文档</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        {% if session == null %}
         <li><a href="{% url 'login' %}">登陆系统</a></li>
+        <li><a href="{% url 'register' %}">注册新用户</a></li>
+        {% else %}
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">用户注册<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">用户名<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{% url 'register' %}">注册新用户</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">任务中心</a></li>
+            <li><a href="#">用户资料</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">注 销</a></li>
           </ul>
         </li>
+        {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
