--- a/wiki/templates/wiki.html
+++ b/wiki/templates/wiki.html
@@ -40,8 +40,12 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <div><i class="glyphicon glyphicon-education"></i> wiki知识库</div>
-    <div class="function" ><a type="button" class="btn btn-success btn-xs" href="{% url 'wiki_add' %}"><i class="fa fa-plus-circle" aria-hidden="true"></i> 新建文章</a> </div>
-
+    <div class="function" ><a type="button" class="btn btn-success btn-xs" href="{% url 'wiki_add' %}"><i class="fa fa-plus-circle" aria-hidden="true"></i> 新建</a>
+    {% if wiki_object %}
+      <a type="button" class="btn btn-info btn-xs" href="{% url 'wiki_edit' wiki_id=wiki_object.id %}"><i class="fa fa-edit" aria-hidden="true"></i> 编辑</a>
+      <a type="button" class="btn btn-danger btn-xs" href="{% url 'wiki_del' wiki_id=wiki_object.id %}"><i class="fa fa-trash" aria-hidden="true"></i> 删除</a>
+    {% endif %}
+      </div>
   </div>
   <div class="panel-body">
     <div class="col-sm-3 title-list" ><div>目录
