--- a/wiki/templates/wiki_form.html
+++ b/wiki/templates/wiki_form.html
@@ -4,6 +4,7 @@
 {% block title %} WIKI 文档 {% endblock %}
 
 {% block css %}
+<link rel="stylesheet" href="{% static 'plugin/editor-md/css/editormd.min.css' %}">
 <style>
   .panel-body {
     padding: 0;
@@ -27,45 +28,58 @@
     min-height: 600px;
     margin-left: -1px;
   }
+  .editormd-fullscreen {
+     z-index:1001;
+  }
 </style>
 {% endblock %}
 
 {% block content %}
 <div class="container-fluid">
-<div class="panel panel-default">
-  <div class="panel-heading"><i class="glyphicon glyphicon-education"></i> wiki知识库 </div>
-  <div class="panel-body">
-        <div class="col-sm-3 title-list" >目录
-      <ul id="catalog">
-      </ul>
-    </div>
-      <div class="col-sm-9 content">
-        <div>
-          <form method="post" style="margin: 30px;">
-            {% csrf_token %}
-            {% for field in form %}
-            <div class="form-group">
-              <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-              {{ field }}
-              <span class="error-msg">{{ field.errors.0 }}</span>
+    <div class="panel panel-default">
+        <div class="panel-heading"><i class="glyphicon glyphicon-education"></i> wiki知识库 </div>
+        <div class="panel-body">
+            <div class="col-sm-3 title-list" >目录
+                <ul id="catalog">
+                </ul>
             </div>
-            {% endfor %}
-            <button type="submit" class="btn btn-default">提 交</button>
-          </form>
-      </div>
-      </div>
-  </div>
-</div>
+            <div class="col-sm-9 content">
+                <div>
+                    <form method="post" style="margin: 30px;">
+                        {% csrf_token %}
+                        {% for field in form %}
+                        {% if field.name == "content" %}
+                        <div class="form-group">
+                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                            <div id="editor">{{ field }}</div>
+                            <span class="error-msg">{{ field.errors.0 }}</span>
+                        </div>
+                        {% else %}
+                        <div class="form-group">
+                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                            {{ field }}
+                            <span class="error-msg">{{ field.errors.0 }}</span>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                        <button type="submit" class="btn btn-default">提 交</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
 
 {% block js %}
+<script src="{% static 'plugin/editor-md/editormd.min.js' %}"></script>
 <script>
   var WIKI_DETAIL_URL = "{% url 'wiki_index' %}";
 
   $(function (){
     initCatalog();
+    initEditorMd();
   });
 
   function initCatalog() {
@@ -90,5 +104,14 @@
       }
     })
   }
+
+  function initEditorMd() {
+    editormd('editor',{
+      placeholder:"请输入内容",
+      height:500,
+      path: "{% static 'plugin/editor-md/lib/' %}"
+    })
+  }
+
 </script>
 {% endblock %}
