修改完成wiki的图片本地上传的功能

--- a/wiki/templates/wiki_form.html
+++ b/wiki/templates/wiki_form.html
@@ -76,7 +76,7 @@
 <script src="{% static 'plugin/editor-md/editormd.min.js' %}"></script>
 <script>
   var WIKI_DETAIL_URL = "{% url 'wiki_index' %}";
-
+  var WIKI_UPLOAD_URL = "{% url 'wiki_upload' %}";
   $(function (){
     initCatalog();
     initEditorMd();
@@ -109,7 +109,10 @@
     editormd('editor',{
       placeholder:"请输入内容",
       height:500,
-      path: "{% static 'plugin/editor-md/lib/' %}"
+      path: "{% static 'plugin/editor-md/lib/' %}",
+      imageUpload: true,
+      imageFormats: ["jpg","jpeg","png","gif"],
+      imageUploadURL: WIKI_UPLOAD_URL,
     })
   }
 
